@@ -1,3 +1,7 @@
+2004-04-08	blytkerchan
+	* compare_and_exchange.c: apply license
+	* decrement.c: ditto
+
 2004-03-09	blytkerchan
 	* decrement.c: new file
 
